--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Word Guess Game</title>
 </head>
-<body>
-    <header id ="masthead">
-        <div class="container">
+<body id="whole" class="reference">
+    <header id="masthead" class="head">
+        <div class= "container">
             <h1>HANGMAN</h1>
         </div>
+        
         <div class="sub-container">
             <h1>80's Style</h1>
-        </div>
+       </div>
     </header>
 
     <div id="main-container" class="new-container">
         <section class="main-section">
-            <img src="assets/images/guns-n-roses.jpg" class="guns-and-roses" alt="gnr">
+            <img src="assets/images/pink-floyd.jpg" class="guns-and-roses" alt="gnr">
         </section>
     </div>
     
@@ -31,10 +32,16 @@
             <div class="current-word">CURRENT WORD</div>  
                 <div id="blanks" class="fill"> _ _ _ _ _ _ _</div>  
             <div class="guesses-remaining">NUMBER OF GUESSES REMAINING</div>
-                <div id="-box"></div>
+                <div class="box"></div>
             <div class="letters-guessed">LETTERS ALREADY GUESSED</div>
                 <div class="guessed-box"></div>
         </aside>
     </div>
+
+    <footer class="bottom-container">
+        <div>Copyright</div>
+    </footer>
+
+    <script src="game.js"></script>
 </body>
 </html>
