--- a/index.html
+++ b/index.html
@@ -1,47 +1,29 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Word Guess Game</title>
+    <title>Word-Guess-Game</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Londrina+Solid|PT+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body id="whole" class="reference">
-    <header id="masthead" class="head">
-        <div class= "container">
-            <h1>HANGMAN</h1>
+<body>
+
+    <div id="container">
+        <div class="main-container">
+            <h1>Word Guess Game</h1>
+            <h3 class="ptSans">Press the keyboard to guess the letters!</h3>
+            <h3 class="bottom ptSans">Hint: Words are Halloween related</h3>
+            <p id="guess"></p>
+            <p class="size">Guesses Left: <span id="left" class="sizeNumber ptSans"></span></p>
+            <p class="size">Wrong Letters: <span id="wrong" class="sizeNumber ptSans"></span></p>
+            <p class="size">Win: <span id="wins" class="sizeNumber ptSans"></span>Lose: <span id="losses" class="sizeNumber ptSans"></span></p>
+            <div id="img"></div>
         </div>
-        
-        <div class="sub-container">
-            <h1>80's Style</h1>
-       </div>
-    </header>
-
-    <div id="main-container" class="new-container">
-        <section class="main-section">
-            <img src="assets/images/pink-floyd.jpg" class="guns-and-roses" alt="gnr">
-        </section>
     </div>
+
+    <script src="assets/javascript/game.js"></script>
     
-    <div id="play-container" class="play">
-        <aside class="aside-container">
-            <div class="heading-container">PRESS ANY KET TO GET STARTED!</div>
-                <div class="wins">WINS</div>
-                    <div class="empty-container"></div>
-            <div class="current-word">CURRENT WORD</div>  
-                <div id="blanks" class="fill"> _ _ _ _ _ _ _</div>  
-            <div class="guesses-remaining">NUMBER OF GUESSES REMAINING</div>
-                <div class="box"></div>
-            <div class="letters-guessed">LETTERS ALREADY GUESSED</div>
-                <div class="guessed-box"></div>
-        </aside>
-    </div>
-
-    <footer class="bottom-container">
-        <div>Copyright</div>
-    </footer>
-
-    <script src="game.js"></script>
 </body>
 </html>
